src/test/deca/syntax/invalid/obtained_res/FctSansAccoladesynt.res
./src/test/deca/syntax/invalid/created/testGeneraux/FctSansAccolade.deca:8:0: no viable alternative at input 'int'
